# cimm

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  train.py  val.py
.github/workflows/: pypi-publish.yml  rasnatune-pypi-publish.yml
cimm/: __init__.py
cimm/compression/: __init__.py  compression.py  quantization.py  sparsification.py
cimm/distillation/: __init__.py  distillation.py
cimm/utils/: datasets.py
cizm/: compression.py  quantization.py  sparsification.py
compression/: compression.py  quantization.py
distillation/: distillation.py
examples/: train.py  val.py
rasnatune/: __init__.py  base.py  compression.py  quantization.py  sparsification.py
tests/: test_compression.py  test_quantization.py  test_sparsification.py
utils/: __init__.py  datasets.py  models.py
