[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cizm"
version = "0.0.1"
description = "Compression Image Models: compression utilities for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cizm contributors" }]
license = "MIT"
keywords = ["pytorch", "compression", "sparsification", "quantization"]
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["cizm*"]
exclude = ["__pycache__*"]
