[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasnatune"
version = "0.0.1"
description = "Runtime compression tuning utilities for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rasnatune contributors" }]
license = "MIT"
keywords = ["pytorch", "compression", "sparsification", "quantization"]
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["rasnatune*"]
exclude = ["__pycache__*"]
